src/main/java/com/hanelalo/ddl/parse/engine/DdlParser.java
// Generated from /Users/hanelalo/develop/simple-ddl-parser/src/main/resources/DdlParser.g4 by ANTLR 4.12.0
package com.hanelalo.ddl.parse.engine;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DdlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CREATE=1, TABLE=2, KEY=3, INT=4, VARCHAR=5, COMMENT=6, PRIMARY=7, UNIQUE=8, 
		EQUALS=9, NOT=10, NULL=11, DEFAULT=12, ON=13, UPDATE=14, CURRENT_TIMESTAMP=15, 
		TEXT=16, DATE=17, DATETIME=18, TIMESTAMP=19, AUTO_INCRMENT=20, BACKQUOTE=21, 
		USING=22, BTREE=23, NUMBER=24, ID=25, WS=26, LEFT_BRACKETS=27, RIGHT_BRACKETS=28, 
		SEMICOLON=29, COMMA=30, ANY_STRING=31;
	public static final int
		RULE_parse = 0, RULE_creatTable = 1, RULE_tableName = 2, RULE_tableDefinitions = 3, 
		RULE_tableDefinition = 4, RULE_columnOption = 5, RULE_columnName = 6, 
		RULE_columnType = 7, RULE_intType = 8, RULE_textType = 9, RULE_columnLength = 10, 
		RULE_varcharType = 11, RULE_dateType = 12, RULE_datetimeType = 13, RULE_timestampType = 14, 
		RULE_comment = 15, RULE_commentContent = 16, RULE_columnAttrOptions = 17, 
		RULE_columnAttrOption = 18, RULE_primaryKeyOption = 19, RULE_autoincrementOption = 20, 
		RULE_nullOption = 21, RULE_defaultOption = 22, RULE_defaultValue = 23, 
		RULE_indexOption = 24, RULE_indexColumns = 25, RULE_primaryKey = 26, RULE_primaryKeyColumn = 27, 
		RULE_uniqueKey = 28, RULE_uniqueKeyName = 29, RULE_uniqueKeyColumn = 30, 
		RULE_tableOptions = 31, RULE_tableOption = 32, RULE_tableComment = 33, 
		RULE_tabelCommentContent = 34, RULE_autoIncrementTableOption = 35, RULE_id = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "creatTable", "tableName", "tableDefinitions", "tableDefinition", 
			"columnOption", "columnName", "columnType", "intType", "textType", "columnLength", 
			"varcharType", "dateType", "datetimeType", "timestampType", "comment", 
			"commentContent", "columnAttrOptions", "columnAttrOption", "primaryKeyOption", 
			"autoincrementOption", "nullOption", "defaultOption", "defaultValue", 
			"indexOption", "indexColumns", "primaryKey", "primaryKeyColumn", "uniqueKey", 
			"uniqueKeyName", "uniqueKeyColumn", "tableOptions", "tableOption", "tableComment", 
			"tabelCommentContent", "autoIncrementTableOption", "id"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'create'", "'table'", "'key'", "'int'", "'varchar'", "'comment'", 
			"'primary'", "'unique'", "'='", "'not'", "'null'", "'default'", "'on'", 
			"'update'", "'current_timestamp'", "'text'", "'date'", "'datetime'", 
			"'timestamp'", "'auto_increment'", "'`'", "'using'", "'btree'", null, 
			null, null, "'('", "')'", "';'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CREATE", "TABLE", "KEY", "INT", "VARCHAR", "COMMENT", "PRIMARY", 
			"UNIQUE", "EQUALS", "NOT", "NULL", "DEFAULT", "ON", "UPDATE", "CURRENT_TIMESTAMP", 
			"TEXT", "DATE", "DATETIME", "TIMESTAMP", "AUTO_INCRMENT", "BACKQUOTE", 
			"USING", "BTREE", "NUMBER", "ID", "WS", "LEFT_BRACKETS", "RIGHT_BRACKETS", 
			"SEMICOLON", "COMMA", "ANY_STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DdlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DdlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DdlParser.EOF, 0); }
		public List<CreatTableContext> creatTable() {
			return getRuleContexts(CreatTableContext.class);
		}
		public CreatTableContext creatTable(int i) {
			return getRuleContext(CreatTableContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CREATE) {
				{
				{
				setState(74);
				creatTable();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreatTableContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(DdlParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(DdlParser.TABLE, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode LEFT_BRACKETS() { return getToken(DdlParser.LEFT_BRACKETS, 0); }
		public TableDefinitionsContext tableDefinitions() {
			return getRuleContext(TableDefinitionsContext.class,0);
		}
		public TerminalNode RIGHT_BRACKETS() { return getToken(DdlParser.RIGHT_BRACKETS, 0); }
		public TableOptionsContext tableOptions() {
			return getRuleContext(TableOptionsContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(DdlParser.SEMICOLON, 0); }
		public CreatTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_creatTable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterCreatTable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitCreatTable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitCreatTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreatTableContext creatTable() throws RecognitionException {
		CreatTableContext _localctx = new CreatTableContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_creatTable);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(CREATE);
			setState(83);
			match(TABLE);
			setState(84);
			tableName();
			setState(85);
			match(LEFT_BRACKETS);
			setState(86);
			tableDefinitions();
			setState(87);
			match(RIGHT_BRACKETS);
			setState(88);
			tableOptions();
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(89);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TableNameContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterTableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitTableName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitTableName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableNameContext tableName() throws RecognitionException {
		TableNameContext _localctx = new TableNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_tableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TableDefinitionsContext extends ParserRuleContext {
		public List<TableDefinitionContext> tableDefinition() {
			return getRuleContexts(TableDefinitionContext.class);
		}
		public TableDefinitionContext tableDefinition(int i) {
			return getRuleContext(TableDefinitionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DdlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DdlParser.COMMA, i);
		}
		public TableDefinitionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableDefinitions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterTableDefinitions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitTableDefinitions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitTableDefinitions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableDefinitionsContext tableDefinitions() throws RecognitionException {
		TableDefinitionsContext _localctx = new TableDefinitionsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tableDefinitions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			tableDefinition();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(95);
				match(COMMA);
				setState(96);
				tableDefinition();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TableDefinitionContext extends ParserRuleContext {
		public ColumnOptionContext columnOption() {
			return getRuleContext(ColumnOptionContext.class,0);
		}
		public IndexOptionContext indexOption() {
			return getRuleContext(IndexOptionContext.class,0);
		}
		public PrimaryKeyContext primaryKey() {
			return getRuleContext(PrimaryKeyContext.class,0);
		}
		public UniqueKeyContext uniqueKey() {
			return getRuleContext(UniqueKeyContext.class,0);
		}
		public TableDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tableDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterTableDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitTableDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitTableDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TableDefinitionContext tableDefinition() throws RecognitionException {
		TableDefinitionContext _localctx = new TableDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tableDefinition);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BACKQUOTE:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				columnOption();
				}
				break;
			case KEY:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				indexOption();
				}
				break;
			case PRIMARY:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				primaryKey();
				}
				break;
			case UNIQUE:
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				uniqueKey();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnOptionContext extends ParserRuleContext {
		public ColumnNameContext columnName() {
			return getRuleContext(ColumnNameContext.class,0);
		}
		public ColumnTypeContext columnType() {
			return getRuleContext(ColumnTypeContext.class,0);
		}
		public ColumnAttrOptionsContext columnAttrOptions() {
			return getRuleContext(ColumnAttrOptionsContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public ColumnOptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnOption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterColumnOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitColumnOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitColumnOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnOptionContext columnOption() throws RecognitionException {
		ColumnOptionContext _localctx = new ColumnOptionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_columnOption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			columnName();
			setState(109);
			columnType();
			setState(110);
			columnAttrOptions();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(111);
				comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnNameContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ColumnNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterColumnName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitColumnName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitColumnName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnNameContext columnName() throws RecognitionException {
		ColumnNameContext _localctx = new ColumnNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_columnName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnTypeContext extends ParserRuleContext {
		public IntTypeContext intType() {
			return getRuleContext(IntTypeContext.class,0);
		}
		public VarcharTypeContext varcharType() {
			return getRuleContext(VarcharTypeContext.class,0);
		}
		public TextTypeContext textType() {
			return getRuleContext(TextTypeContext.class,0);
		}
		public DateTypeContext dateType() {
			return getRuleContext(DateTypeContext.class,0);
		}
		public DatetimeTypeContext datetimeType() {
			return getRuleContext(DatetimeTypeContext.class,0);
		}
		public TimestampTypeContext timestampType() {
			return getRuleContext(TimestampTypeContext.class,0);
		}
		public ColumnTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterColumnType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitColumnType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitColumnType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnTypeContext columnType() throws RecognitionException {
		ColumnTypeContext _localctx = new ColumnTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_columnType);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				intType();
				}
				break;
			case VARCHAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				varcharType();
				}
				break;
			case TEXT:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				textType();
				}
				break;
			case DATE:
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				dateType();
				}
				break;
			case DATETIME:
				enterOuterAlt(_localctx, 5);
				{
				setState(120);
				datetimeType();
				}
				break;
			case TIMESTAMP:
				enterOuterAlt(_localctx, 6);
				{
				setState(121);
				timestampType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntTypeContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DdlParser.INT, 0); }
		public TerminalNode LEFT_BRACKETS() { return getToken(DdlParser.LEFT_BRACKETS, 0); }
		public ColumnLengthContext columnLength() {
			return getRuleContext(ColumnLengthContext.class,0);
		}
		public TerminalNode RIGHT_BRACKETS() { return getToken(DdlParser.RIGHT_BRACKETS, 0); }
		public IntTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterIntType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitIntType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitIntType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntTypeContext intType() throws RecognitionException {
		IntTypeContext _localctx = new IntTypeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_intType);
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(INT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(125);
				match(INT);
				setState(126);
				match(LEFT_BRACKETS);
				setState(127);
				columnLength();
				setState(128);
				match(RIGHT_BRACKETS);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TextTypeContext extends ParserRuleContext {
		public TerminalNode TEXT() { return getToken(DdlParser.TEXT, 0); }
		public TerminalNode LEFT_BRACKETS() { return getToken(DdlParser.LEFT_BRACKETS, 0); }
		public ColumnLengthContext columnLength() {
			return getRuleContext(ColumnLengthContext.class,0);
		}
		public TerminalNode RIGHT_BRACKETS() { return getToken(DdlParser.RIGHT_BRACKETS, 0); }
		public TextTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterTextType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitTextType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitTextType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextTypeContext textType() throws RecognitionException {
		TextTypeContext _localctx = new TextTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_textType);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				match(TEXT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(133);
				match(TEXT);
				setState(134);
				match(LEFT_BRACKETS);
				setState(135);
				columnLength();
				setState(136);
				match(RIGHT_BRACKETS);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumnLengthContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(DdlParser.NUMBER, 0); }
		public ColumnLengthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columnLength; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterColumnLength(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitColumnLength(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitColumnLength(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ColumnLengthContext columnLength() throws RecognitionException {
		ColumnLengthContext _localctx = new ColumnLengthContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_columnLength);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarcharTypeContext extends ParserRuleContext {
		public TerminalNode VARCHAR() { return getToken(DdlParser.VARCHAR, 0); }
		public TerminalNode LEFT_BRACKETS() { return getToken(DdlParser.LEFT_BRACKETS, 0); }
		public ColumnLengthContext columnLength() {
			return getRuleContext(ColumnLengthContext.class,0);
		}
		public TerminalNode RIGHT_BRACKETS() { return getToken(DdlParser.RIGHT_BRACKETS, 0); }
		public VarcharTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varcharType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterVarcharType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitVarcharType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitVarcharType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarcharTypeContext varcharType() throws RecognitionException {
		VarcharTypeContext _localctx = new VarcharTypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_varcharType);
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(142);
				match(VARCHAR);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(143);
				match(VARCHAR);
				setState(144);
				match(LEFT_BRACKETS);
				setState(145);
				columnLength();
				setState(146);
				match(RIGHT_BRACKETS);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DateTypeContext extends ParserRuleContext {
		public TerminalNode DATE() { return getToken(DdlParser.DATE, 0); }
		public DateTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dateType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).enterDateType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DdlParserListener ) ((DdlParserListener)listener).exitDateType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DdlParserVisitor ) return ((DdlParserVisitor<? extends T>)visitor).visitDateType(this);
			else return visitor.visitChildren(this);
		}
	}
